# backend-starter-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  prometheus.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 17f4fb1e7d2d_add_is_admin_to_users.py  8e57f450a02c_initial_schema.py
app/: main.py
app/api/: deps.py
app/api/v1/: api.py
app/api/v1/endpoints/: __init__.py  auth.py  items.py  users.py
app/core/: __init__.py  config.py  logging.py  metrics.py  rate_limit.py  security.py
app/db/: base.py  models.py  session.py
app/schemas/: auth.py  item.py  user.py
app/services/: auth_service.py  user_service.py
app/utils/: __init__.py  time.py
tests/: conftest.py  test_auth.py  test_auth_service_unit.py  test_config.py  test_db_session.py  test_deps.py  test_exception_handlers.py  test_items.py  test_items_unit.py  test_middleware.py  test_rate_limit.py  test_user_schemas.py  test_user_service.py  test_users_unit.py
