[project]
name = "backend-starter-api"
version = "0.2.0"
description = "Production-adjacent FastAPI starter with JWT auth, robust password policy, rate limiting, and 95%+ test coverage"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["fastapi", "api", "jwt", "auth", "starter-template", "sqlalchemy"]
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.30",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "email-validator>=2.1.0",
    "python-jose>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt<4.0",
    "python-multipart>=0.0.9",
    "psycopg2-binary>=2.9.9",
    "slowapi>=0.1.9",
    "redis>=5.0.0",
    "fastapi-cache2>=0.2.1",
]

[project.urls]
"Homepage" = "https://github.com/Nebtakhet/backend-starter-api"
"Repository" = "https://github.com/Nebtakhet/backend-starter-api.git"
"Issues" = "https://github.com/Nebtakhet/backend-starter-api/issues"
"Documentation" = "https://github.com/Nebtakhet/backend-starter-api#readme"

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
	"pip-audit>=2.6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
disallow_untyped_defs = false
no_implicit_optional = true
check_untyped_defs = true
ignore_missing_imports = true

[build-system]
requires = ["setuptools>=77.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app", "alembic"]
